# TFG_publico

./: .gitignore  README.md  pioner_2d_scanner
hector_mapping/launch/: mapping_default.launch
hector_mapping/src/: HectorMappingRos.cpp  HectorMappingRos.cpp~
rossim/: CMakeLists.txt  laser_geometry.h  package.xml  rambler.rviz
rossim/cfg/: rossim.cfg
rossim/config/: postprocessor_pipeline.yaml  rambler_robot.yaml
rossim/config/navegacion/: costmap_common_params.yaml  costmap_global_params.yaml  costmap_global_params_plugins.yaml  costmap_local_params.yaml  costmap_local_params_plugins.yaml  dwb_local_planner_params copy.yaml  dwb_local_planner_params.yaml  move_base.xml  move_base_common_params.yaml  move_base_params.yaml  sbpl_global_params.yaml
rossim/config/rambler_urdf/: rambler copy.urdf  rambler.urdf  rambler_Brazo1_vis_1.dae  rambler_Brazo1_vis_2.dae  rambler_Brazo1_vis_3.dae  rambler_Brazo1dyn_coll_1.dae  rambler_Brazo2_vis_1.dae  (+131 more)
rossim/launch/: elevation.launch  miniagv.launch  move_base.launch  scene_launch.launch  simple_demo.launch  teleop.launch
rossim/scripts/: capa_slope.py  capas_elevation.py  control_teclado.py  cuadriculas.py  elev_map.py  laser2pcl.py  malla.py  occupancyGrid2Costmap.py  odometria.py  path_malla.py  pcl_pcl2.py  pose_covarianza.py  rtt_planner.py  slope_costmap.py  slope_plot.py  start_coppelia.py  stopper.py  stopper_vrep.py  teleop_twist_keyboard.py  vector_planner.py
rossim/src/: costmap.cpp  gridmap2OccupancyGrid.cpp  las2pcl.cpp
vrep_ros_launcher/: CMakeLists.txt  README.md  package.xml  vrep  vrep.launch
