<?xml version="1.0"?>
<package format="2">
  <name>vrep_ros_launcher</name>
  <version>0.1.0</version>
  <description>The vrep_ros_launcher package</description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
